# vela-pulse

./: .editorconfig  .env.example  .envrc  .gitignore  CLAUDE.md  Makefile  README.md  TRD.md
.github/workflows/: ci.yml
gateway/: Dockerfile  Makefile  go.mod  go.sum  sqlc.yaml
gateway/cmd/server/: main.go
gateway/internal/auth/: siwa.go  siwa_test.go
gateway/internal/config/: config.go
gateway/internal/db/: db.go  maintenance.go
gateway/internal/feed/: cache.go  cache_test.go  consumer.go  consumer_test.go  dedup.go  dedup_test.go  merge.go  merge_test.go  normalize.go  normalize_test.go
gateway/internal/handler/: auth.go  feed.go  feed_test.go  health.go
gateway/internal/middleware/: auth.go  auth_test.go  killswitch.go  killswitch_test.go
gateway/internal/redis/: client.go
gateway/internal/scoring/: pulse.go  pulse_test.go
gateway/internal/snapshot/: paginator.go  paginator_test.go
infra/: Dockerfile.postgres  compose.yaml
infra/migrations/: 001_create_users.sql  002_create_articles.sql  003_partman_setup.sql  004_indexes.sql
infra/terraform/: cloud-init.sh  main.tf  terraform.tfvars.example  variables.tf
ios/VelaPulse/: Info.plist  PrivacyInfo.xcprivacy
ios/VelaPulse.xcodeproj/: project.pbxproj
ios/VelaPulse/App/: AppEnvironment.swift  VelaPulseApp.swift
scraper/: Makefile  pyproject.toml
scraper/scraper/: browser.py  config.py  main.py  normalize.py  orchestrator.py  proxy.py  publisher.py
scraper/scraper/sites/: base.py  espn.py
scraper/tests/: test_normalize.py  test_orchestrator.py  test_proxy.py
(+14 files in other folders)
