[project]
name = "vela-scraper"
version = "0.1.0"
description = "Vela Pulse homelab scraper — Playwright + Redis Streams"
requires-python = ">=3.12"
dependencies = [
    "playwright>=1.44.0",
    "playwright-stealth>=1.0.6",
    "redis[hiredis]>=5.0.0",
    "pydantic-settings>=2.3.0",
    "httpx>=0.27.0",
]

[project.scripts]
scraper = "scraper.main:main"

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["scraper"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
